# GITHUB_skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  LICENSE  MODEL_STRATEGY.md  README.md  USER_LEVEL_SETUP.md  VSCODE_SETUP.md  fix_blanks.py  opencode.jsonc  package.json  pyproject.toml
agents/: Architect.agent.md  CopilotLogger.agent.md  DevOps.agent.md  Developer.agent.md  Discovery.agent.md  Migrator.agent.md  Planner.agent.md  Product.agent.md  Researcher.agent.md  Reviewer.agent.md  SecurityAuditor.agent.md  Tester.agent.md
copilot_skills_kit/: __init__.py  cli.py
git-hooks/: README.md  post-commit  post-merge
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_extract.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
instructions/: api-versioning.instructions.md  architecture.instructions.md  code-graph.instructions.md  coding.go.instructions.md  coding.java.instructions.md  coding.javascript.instructions.md  coding.python.instructions.md  coding.rust.instructions.md  coding.sql.instructions.md  coding.standard.instructions.md  coding.terraform.instructions.md  coding.typescript.instructions.md  copilot.instructions.md  devops.instructions.md  docker.instructions.md  documentation.instructions.md  observability.instructions.md  quality.instructions.md  review.instructions.md  security.instructions.md  testing.instructions.md  ui.instructions.md
prompts/: audit.prompt.md  cicd.prompt.md  code.prompt.md  design.prompt.md  diff.prompt.md  discover.prompt.md  (+11 more)
(+22 files in other folders)
